add vconsole for debug

--- a/static/index.html
+++ b/static/index.html
@@ -88,5 +88,11 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/base64url-arraybuffer.js"></script>
     <script src="js/bundle.js"></script>
+    <script src="js/vconsole.min.js"></script>
+    <script>
+  // init vConsole
+        var vConsole = new VConsole();
+        console.log('Hello world');
+    </script>
 </body>
 </html>
