user can send ckb to address they want

--- a/static/aggron.html
+++ b/static/aggron.html
@@ -84,7 +84,8 @@
                     <div>CKBAddress: <span id="address" class='addressSpan'></span></div>
                     <div>Balance: <span id="balance"></span> CKB </div>
                     <hr>
-                    <div> send 100 CKB to <span class="addressSpan">ckt1qyqv4yga3pgw2h92hcnur7lepdfzmvg8wj7qn44vz8 </span>
+                    <div> send 100 CKB to <span class="addressSpan"></span>
+                        <span><input type="text" id="toAddress" placeholder="input ckb testnet address here" /></span>
                      </div>
                      <div>
                     <button id="sendCKB">sendCKB</button>
