--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,109 @@
-aggron.html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="css/milligram.min.css">
+    <style>
+        html, body, .container, .row {
+            height: 99%;
+        }
+
+        .formcontainer {
+            background: #f0f0f0;
+            padding: 15px;
+        }
+
+        .formcontainer form, .formcontainer fieldset{
+            margin:0;
+        } 
+        .secretcontainer {
+            background: #f0f0f0;
+            padding: 15px;
+        }
+
+        #registerContainer, #mainContainer {
+            display: none;
+        }
+        .addressSpan {
+            word-break: break-word;
+            color: darkcyan;
+        }
+
+        #balance {
+            color: orangered;
+        }
+        hr {
+            border-top: 1px dashed red;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="row row-center">
+
+            <div class="column" id="registerContainer">
+                <div class="formcontainer register">
+                    <h3>Register page</h3>
+                    <form id="register">
+                      <fieldset>
+                        <label for="username">username</label>
+                        <input type="text" name="username">
+
+                        <input class="button-primary" type="submit" value="Register">
+                      </fieldset>
+                    </form>
+
+                    <a href="#" id="toLogin">Already registered? Login page</a>
+                </div>
+            </div>
+
+            <div class="column" id="loginContainer">
+                <div class="formcontainer login">
+                    <h3>Login page</h3>
+                    <form id="login">
+                      <fieldset>
+                        <label for="username">username</label>
+                        <input type="text" name="username">
+
+                        <input class="button-primary" type="submit" value="Login">
+                      </fieldset>
+                    </form>
+
+                    <a href="#" id="toRegistration">Not registered yet? Registration</a>
+                </div>
+            </div>
+
+            <div class="column" id="mainContainer">
+
+                <div class="secretcontainer" style="overflow: hidden;">
+		            <h3>Hey <span id="name"></span>!</h3>
+		            <div>CKBAddress: <span id="address" class='addressSpan'></span></div>
+                    <div style="margin-bottom: 1rem;">Balance: <span id="balance"></span> CKB </div>
+                    <div>Need some testnet CKB? Visit the <a href='https://faucet.nervos.org/' target = '_blank'>Nervos Faucet</a>!</div>
+                    <hr>
+                    <div>Send 100 CKB to <span class="addressSpan"></span>
+                    <input type="text" id="toAddress" placeholder="input ckb testnet address here" />
+                    </div>
+                    <div>
+                    <button id="sendCKB">Send CKB</button>
+                    </div>
+                    <hr>
+                    <button id="logoutButton">Logout</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/base64url-arraybuffer.js"></script>
+    <script src="js/bundle.js"></script>
+    <script src="js/vconsole.min.js"></script>
+    <script>
+  // init vConsole
+        var vConsole = new VConsole();
+        console.log('Hello world');
+    </script>
+</body>
+</html>
